# installable-app-test

./: .gitignore  MANIFEST.in  README.md  README.rst  boot_django.py  load_tests.py  migrate.py  setup.cfg  tox.ini
receipts/: admin.py  models.py  tests.py  urls.py  views.py
receipts/fixtures/: receipts.json
receipts/migrations/: 0001_initial.py
sample_project/: requirements.txt  settings.py  urls.py
