# setup.cfg
[metadata]
name = installable-app-test
version = 0.1
description = Sample installable django app
long_description = file:README.rst
url = https://github.com/priyapahwa/installable-app-test
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
test_suite = load_tests.get_suite